Image size "fix"
Added CSS for #background_image which helps the problem of oversized
images not fitting on the screen, but it’s not perfect.  Images can
still be too tall and go beyond the fold.

--- a/kiosk.css
+++ b/kiosk.css
@@ -129,7 +129,12 @@ textarea {
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
-    object-fit: contain;
+    object-fit: contain;    
+}
+
+#background_image {
+    max-width:100%;
+    max-height:100%;
 }
 
 .alert {
